# LettuceDetect

./: pyproject.toml
jobs/: benchmark_all.slurm  benchmark_cascade_14b.slurm  benchmark_cascade_3b.slurm  benchmark_cascade_7b.slurm  benchmark_cascade_8b.slurm  benchmark_validation.slurm  setup_vsc.sh
lettucedetect/: __init__.py
lettucedetect/cascade/: __init__.py  types.py
lettucedetect/configs/: __init__.py  models.py  presets.py
lettucedetect/detectors/: base.py  blend.py  cascade.py  factory.py  llm.py  task_classifier.py
lettucedetect/detectors/stage1/: __init__.py  aggregator.py  detector.py
lettucedetect/detectors/stage2/: __init__.py  aggregator.py  config.py  detector.py  model2vec_encoder.py  nli_detector.py
lettucedetect/detectors/stage3/: __init__.py  base_stage3.py  grounding_probe_detector.py  reading_probe_detector.py
lettucedetect/integrations/elysia/: tools.py
lettucedetect/integrations/langchain/: callbacks.py
lettucedetect/models/: inference.py
lettucedetect/utils/: __init__.py  lexical.py
lettucedetect_api/: server.py
scripts/: calibrate_thresholds.py  start_api.py  thresholds_stage1.json  thresholds_stage2.json
tests/: conftest.py  pytest.ini
tests/benchmarks/: __init__.py  analyze_calibration.py  analyze_error_correlation.py  analyze_score_blending.py  analyze_voting_mechanisms.py  conftest.py  run_benchmarks.py  run_complete_benchmark.py  run_full_benchmark.py  verify_stage1_combo.py
tests/benchmarks/cascade/: __init__.py  test_cascade_stages12.py  test_escalation.py  test_routing.py
tests/benchmarks/components/: __init__.py  test_stage1_lexical.py  test_stage1_ner.py  test_stage1_numeric.py  test_stage1_transformer.py  test_stage2_model2vec.py  test_stage2_nli.py
tests/benchmarks/config/: __init__.py  benchmark_config.py
tests/benchmarks/core/: __init__.py  memory.py  metrics.py  models.py  stage3_variants.py  timer.py
tests/benchmarks/data_adapters/: __init__.py  base.py  halueval.py  ragtruth.py
tests/benchmarks/reports/: __init__.py  json_reporter.py  table_reporter.py
tests/benchmarks/results/: blending_analysis.json
tests/benchmarks/stages/: __init__.py  _stage3_helpers.py  test_stage1.py  test_stage2.py  test_stage3_3b.py  test_stage3_7b.py  test_stage3_8b.py
tests/integration/: __init__.py
tests/integration/stage1/: __init__.py  test_lexical_overlap_pytest.py  test_ner_verifier_pytest.py  test_numeric_validator_pytest.py  (+1 more)
tests/unit/: __init__.py  test_blend_detector.py  test_configs.py  test_configs_pytest.py  test_task_classifier.py
(+202 files in other folders)
